Revert "prologue theme added"
This reverts commit ebf214c8c2eb5dff4c9742a3865b2d4aef459a9a.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: slightly opaque
 permalink: none
 # markdown: redcarpet
-theme: jekyll-theme-prologue
+# theme: minima
 # pygments: true
 # rouge: true
